tests/ui/conditional-compilation/cfg_accessible-unstable.stderr
error[E0658]: use of unstable library feature `cfg_accessible`: `cfg_accessible` is not fully implemented
  --> $DIR/cfg_accessible-unstable.rs:1:3
   |
LL | #[cfg_accessible(std)]
   |   ^^^^^^^^^^^^^^
   |
   = note: see issue #64797 <https://github.com/rust-lang/rust/issues/64797> for more information
   = help: add `#![feature(cfg_accessible)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
